Integrate PostgreSQL database with schema, Flyway migrations, and Spring Data JDBC; replace InMemoryBookRepository with JDBC repository implementation; enhance test setup with Testcontainers for PostgreSQL; refactor BookController and BookService for pageable responses; update configuration and dependencies for database integration.